# SWE-Hub

./: .gitignore  Makefile  README.md  README_zh.md  pyproject.toml
code_data_agent/agent/: agent.py
code_data_agent/llm_server/: llm_server_base.py  llm_server_http.py
code_data_agent/model/: agent.py  llm_server.py  sandbox.py  tool.py
code_data_agent/sandbox/: __init__.py  sandbox_base.py  sandbox_k8s.py  sandbox_local.py
code_data_agent/sandbox/scripts/: __init__.py  bash_func.py  file_editor.py  navigator.py  search_func.py
code_data_agent/tools/: tool_base.py  tool_bash_executor.py  tool_file_editor.py  tool_gen_patch.py  tool_get_hotspots.py  tool_inspect_symbol.py  tool_reset.py  tool_run_test_oracle.py  tool_search.py  tool_stop.py  tool_test_stats_collector.py
code_data_agent/tools/nl2repo_tools/: doc_part1_tools.py  doc_part2_tools.py  tool_static_call_graph.py
data_synthesis_pipeline/bug_agent/: __init__.py  __main__.py  bug_issue_agent.py  main.py
data_synthesis_pipeline/bug_agent/pipeline/: context.py
data_synthesis_pipeline/bug_agent/preprocessor/: __init__.py  repo_analyzer.py  test_report_generator.py
data_synthesis_pipeline/bug_agent/prompts/: __init__.py  (+2 more)
data_synthesis_pipeline/env_agent/: __init__.py  __main__.py  env_agent.py  main.py  two_stage_env_agent.py
data_synthesis_pipeline/nl2repo/: __init__.py  __main__.py  main.py
data_synthesis_pipeline/swe-scale/: README.md  requirements.txt  run.sh
examples/: k8s_single_bash.py  local_single_bash.py
tests/: conftest.py
tests/llm_server/: llm_server_http_test.py
(+6313 files in other folders)
